--- a/src/general.css
+++ b/src/general.css
@@ -32,10 +32,6 @@ body {
 
   /* Center demo content on the screen */
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 /* Make images easier to work with */
@@ -75,4 +71,14 @@ select {
   /* Demo style */
   padding: 0 2em;
   max-width: 90rem;
+}
+
+.container-two {
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.component-gap {
+  padding: 5rem 0;
 }
